--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,9 @@
 [uwsgi]
+pcre=true
 
+chdir = /home/ubuntu/app
+
+master = true
 module = wsgi
 callable = app
 
@@ -7,7 +11,8 @@ processes = 5
 
 socket = /tmp/application.sock
 chmod-socket = 660
-gid = www-data
+uid = ubuntu
+gid = nginx
 
 vacuum = true
 
