--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
    - source: /
-     destination: /app
+     destination: /app/home/ubuntu
 hooks:
    AfterInstall:
     - location: scripts/install_dependencies
