changes for deploy3 (some systemctl)

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,7 +4,7 @@ error_log  /var/log/nginx/nginx_error.log  warn;
 
 server {
     listen 80;
-    server_name fish.name;
+    server_name aqua.name;
 
 
      location / {
@@ -14,7 +14,7 @@ server {
 
 
      location /static {
-         root /home/tania/PycharmProjects/fish;
+         root /home/ubuntu/app/static;
      }
 
 }
