--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,21 +1,28 @@
-
-
 error_log  /var/log/nginx/nginx_error.log  warn;
-
 server {
     listen 80;
     server_name aqua.name;
+#   return 301 https://$host$request_uri; # managed by Certbot
+    location / {
+         include uwsgi_params;
+         uwsgi_pass unix:/tmp/application.sock;
+     }
+
+     location /static {
+         root /home/ubuntu/app;
+     }
+}
+server {
+     listen 443 ssl; # managed by Certbot
+     root /;
+     server_name aqua.name;
+     ssl_certificate /etc/letsencrypt/live/aqua.name/fullchain.pem; # managed by Certbot
+     ssl_certificate_key /etc/letsencrypt/live/aqua.name/privkey.pem; # managed by Certbot
+     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 
      location / {
          include uwsgi_params;
          uwsgi_pass unix:/tmp/application.sock;
-     }
-
-
-     location /static {
-         root /home/ubuntu/app/static;
-     }
-
 }
-
