--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,4 +1,5 @@
 [uwsgi]
+logto = /var/log/uwsgi/uwsgi.log
 pcre=true
 
 chdir = /home/ubuntu/app
@@ -12,8 +13,7 @@ processes = 5
 socket = /tmp/application.sock
 chmod-socket = 660
 uid = ubuntu
-gid = nginx
+gid = www-data
 
 vacuum = true
 
-die-on-term = true
