--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,6 +3,7 @@ server {
     listen 80;
     server_name aqua.name;
 #   return 301 https://$host$request_uri; # managed by Certbot
+    client_max_body_size 30m;
     location / {
          include uwsgi_params;
          uwsgi_pass unix:/tmp/application.sock;
@@ -20,7 +21,7 @@ server {
      ssl_certificate_key /etc/letsencrypt/live/aqua.name/privkey.pem; # managed by Certbot
      include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
      ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
+     client_max_body_size 20m;
 
      location / {
          include uwsgi_params;
