--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -16,4 +16,5 @@ uid = ubuntu
 gid = www-data
 
 vacuum = true
+smart-attach-daemon = /tmp/celery.pid celery -A application.celery worker --pidfile=/tmp/celery.pid
 
