--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -16,5 +16,5 @@ uid = ubuntu
 gid = www-data
 
 vacuum = true
-smart-attach-daemon = /tmp/celery.pid celery -A application.celery worker --pidfile=/tmp/celery.pid
+#smart-attach-daemon = /tmp/celery.pid celery -A application.celery worker --pidfile=/tmp/celery.pid
 
