--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -11,6 +11,7 @@ server {
 
      location /static {
          root /home/ubuntu/app;
+         expires 3h;
      }
 }
 server {
@@ -26,6 +27,7 @@ server {
      location / {
          include uwsgi_params;
          uwsgi_pass unix:/tmp/application.sock;
+         expires 3h;
 
      }
 }
