--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -14,20 +14,20 @@ server {
          expires 3h;
      }
 }
-server {
-     listen 443 ssl; # managed by Certbot
-     root /;
-     server_name aqua.name;
-     ssl_certificate /etc/letsencrypt/live/aqua.name/fullchain.pem; # managed by Certbot
-     ssl_certificate_key /etc/letsencrypt/live/aqua.name/privkey.pem; # managed by Certbot
-     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-     client_max_body_size 20m;
+#server {
+#     listen 443 ssl; # managed by Certbot
+#     root /;
+#     server_name aqua.name;
+#     ssl_certificate /etc/letsencrypt/live/aqua.name/fullchain.pem; # managed by Certbot
+#    ssl_certificate_key /etc/letsencrypt/live/aqua.name/privkey.pem; # managed by Certbot
+#     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+#     client_max_body_size 20m;
 
-     location / {
-         include uwsgi_params;
-         uwsgi_pass unix:/tmp/application.sock;
-         expires 3h;
+#     location / {
+#         include uwsgi_params;
+#         uwsgi_pass unix:/tmp/application.sock;
+#         expires 3h;
 
-     }
-}
+#    }
+#}
