--- a/etc/redis-server.service
+++ b/etc/redis-server.service
@@ -5,8 +5,9 @@ After=network.target
 [Service]
 Type=forking
 
-User=ubuntu
-Group=www-data
+User=redis
+Group=redis
+
 ExecStart=/usr/local/bin/redis-server /etc/redis/redis.conf
 ExecStop=/usr/local/bin/redis-cli shutdown
 Restart=always
